# ROB_semestralka

./: 02_aruco_se3.py  ArUco.py  README.md  aruco_axis.py  dataset_creator.py  detect_aruco.py  fix_exporty_format.py  grab_img.py  homofraphy.py  move_test.py  perception.py  perception_second.py  robot_init.py  se3.py  select_shortest_path.py  so3.py  testing.py
camera/: 02_aruco_se3.py  aruco_axis.py  calib.yaml  dataset_creator.py  grab_img.py  perception_utils.py  show_distortion_correction.py
examples/: 01_move_robot.py  robot.yaml
exporty/: data_1.yaml  data_10.yaml  data_11.yaml  data_12.yaml  data_13.yaml  data_14.yaml  data_15.yaml  data_16.yaml  data_17.yaml  data_18.yaml  data_19.yaml  data_2.yaml  data_20.yaml  data_21.yaml  data_22.yaml  data_23.yaml  data_24.yaml  data_25.yaml  data_26.yaml  data_27.yaml  data_28.yaml  data_29.yaml  data_3.yaml  data_30.yaml  data_4.yaml  data_5.yaml  data_6.yaml  data_7.yaml  data_8.yaml  data_9.yaml
images/: pos.yaml
robot_calibration/: QUICK_START.sh  README.md  calibration_automation.py  calibration_positions.yaml  preview_positions.py  test_single_position.py
test_ikt6/ikt6_ros/: CMakeLists.txt  README.md  compile_commands.json  ikt6_iiwa_kinematics_plugin_description.xml  ikt6_kinematics_plugin_description.xml  package.xml
test_ikt6/ikt6_ros/ikt6/: .gitignore  CMakeLists.txt  QUICK_SUMMARY.md  README.md  TESTING_GUIDE.md
test_ikt6/ikt6_ros/ikt6/include/: ikt6.h  util.h
test_ikt6/ikt6_ros/ikt6/src/: ikt6.cpp  util.cpp
test_ikt6/ikt6_ros/ikt6/tests/: melfa_rv6s_test.cpp  motoman_gp88_test.cpp  motoman_qp180_test.cpp  my_custom_test.cpp  test.h  test_melfa_rv6s.cpp  util_test.cpp
test_ikt6/ikt6_ros/ikt6_iiwa_kinematics_plugin/: CMakeLists.txt
test_ikt6/ikt6_ros/ikt6_iiwa_kinematics_plugin/include/ikt6_ros/ikt6_iiwa_kinematics_plugin/: ikt6_iiwa_kinematics_plugin.h
test_ikt6/ikt6_ros/ikt6_iiwa_kinematics_plugin/src/: ikt6_iiwa_kinematics_plugin.cpp
test_ikt6/ikt6_ros/ikt6_kinematics_plugin/: CMakeLists.txt
test_ikt6/ikt6_ros/ikt6_kinematics_plugin/include/ikt6_ros/ikt6_kinematics_plugin/: ikt6_kinematics_plugin.h
test_ikt6/ikt6_ros/ikt6_kinematics_plugin/src/: ikt6_kinematics_plugin.cpp
test_ikt6/ikt6_ros/tests/: CMakeLists.txt
test_ikt6/ikt6_ros/tests/src/: test_kuka_iiwa7_r800.cpp
tests/: perception.py  test_kinematics.py
