<?xml version="1.0"?>
<package format="3">
  <name>ikt6_ros</name>
  <version>0.0.0</version>
  <description>Package for IKT6 inverse kinematics solver in MoveIt</description>
  <maintainer email="libor.wagner@cvut.cz">Libor Wagner</maintainer>

  <license>???</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_kdl</depend>
  <depend condition="$ROS_DISTRO != noetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>

  <export>
    <moveit_core plugin="${prefix}/ikt6_kinematics_plugin_description.xml"/>
  </export>

</package>
